--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	"repositories_clases": {
 		"droid2ino":"robotic_project",
 		"robopad":"robotic_project",
-		"cervantes":"android_project",
+		"cervantes":"ereader_project",
 		"android-bootanimation-checker":"android_project"},
 	"unwanted_repositories":{
 		"chat-kata":"false",
