--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
 		"droid2ino":"robotic_project",
 		"robopad":"robotic_project",
 		"cervantes":"ereader_project",
-		"android-bootanimation-checker":"android_project"},
+		"android-bootanimation-checker":"android_project",
+		"aquaris-5.7":"smartphone_project"},
 	"unwanted_repositories":{
 		"chat-kata":"false",
 		"chat-kata-extended":"false",
