--- a/config.json
+++ b/config.json
@@ -14,6 +14,8 @@
 	"unwanted_repositories":{
 		"chat-kata":"false",
 		"chat-kata-extended":"false",
-		"bq.github.io":"false"
+		"bq.github.io":"false",
+                "aquaris-5.7" : "false",
+                "aquaris-5" : "false"
 	}
 }
