--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
 		"robopad":"robotic_project",
 		"cervantes":"ereader_project",
 		"android-bootanimation-checker":"android_project",
+		"edison-2" : "tablet_project",
 		"aquaris-5.7":"smartphone_project",
 		"aquaris-5":"smartphone_project"},
 	"unwanted_repositories":{
