--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
 		"cervantes":"ereader_project",
 		"android-bootanimation-checker":"android_project",
 		"edison-2" : "tablet_project",
+		"curie-2" : "tablet_project", 
 		"robopad-plusplus" : "robotic_project",
 		"drag-drop-grid" : "android_project", 
 		"aquaris-5.7":"smartphone_project",
@@ -20,7 +21,6 @@
 		"chat-kata-extended":"false",
 		"bq.github.io":"false",
                 "aquaris-5.7" : "false",
-                "aquaris-5" : "false",
-		"curie-2" : "false"
+                "aquaris-5" : "false"
 	}
 }
