--- a/config.json
+++ b/config.json
@@ -11,7 +11,8 @@
 		"cervantes":"ereader_project",
 		"android-bootanimation-checker":"android_project",
 		"edison-2" : "tablet_project",
-		"curie-2" : "tablet_project", 
+		"curie-2" : "tablet_project",
+		"newton" : "tablet_project", 
 		"robopad-plusplus" : "robotic_project",
 		"drag-drop-grid" : "android_project", 
 		"aquaris-5.7":"smartphone_project",
