--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
 		"chat-kata-extended":"false",
 		"bq.github.io":"false",
                 "aquaris-5.7" : "false",
-                "aquaris-5" : "false"
+                "aquaris-5" : "false",
+		"maxwell-2" : "false"
 	}
 }
