--- a/config.json
+++ b/config.json
@@ -12,6 +12,7 @@
 		"android-bootanimation-checker":"android_project",
 		"edison-2" : "tablet_project",
 		"curie-2" : "tablet_project",
+		"maxwell-2" : "tablet_project",
 		"newton" : "tablet_project", 
 		"robopad-plusplus" : "robotic_project",
 		"drag-drop-grid" : "android_project", 
@@ -22,7 +23,6 @@
 		"chat-kata-extended":"false",
 		"bq.github.io":"false",
                 "aquaris-5.7" : "false",
-                "aquaris-5" : "false",
-		"maxwell-2" : "false"
+                "aquaris-5" : "false"
 	}
 }
