Added 4.5 as project

--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
 		"robopad-plusplus" : "robotic_project",
 		"drag-drop-grid" : "android_project", 
 		"aquaris-5.7":"smartphone_project",
+		"aquaris-4.5":"smartphone_project",
 		"aquaris-5":"smartphone_project"},
 	"unwanted_repositories":{
 		"chat-kata":"false",
