--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
 		"aquaris-4":"smartphone_project",
 		"aquaris-E4.5":"smartphone_project",
 		"aquaris-E5":"smartphone_project",
+		"aquaris-5HD":"smartphone_project",
 		"aquaris-5":"smartphone_project"},
 	"unwanted_repositories":{
 		"chat-kata":"false",
