--- a/config.json
+++ b/config.json
@@ -53,14 +53,14 @@
         "horus-fw" : "false",
         "ciclop" : "false",
         "zum" : "false",
-        "cool-helpers", "false",
-        "oss-parents", "false",
-        "linux-e60622", "false",
-        "linux-e60q22", "false",
-        "kiui", "false",
-        "kiui-themes", "false",
-        "msm8916_platform_vendor_qcom-opensource_wlan_prima", "false",
-        "corbel-composer", "false",
+        "cool-helpers": "false",
+        "oss-parents": "false",
+        "linux-e60622": "false",
+        "linux-e60q22": "false",
+        "kiui": "false",
+        "kiui-themes": "false",
+        "msm8916_platform_vendor_qcom-opensource_wlan_prima": "false",
+        "corbel-composer": "false",
 		"bq.github.io":"false"
 
 	}
