Added robotic projects

--- a/config.json
+++ b/config.json
@@ -6,11 +6,17 @@
 		"tablet_project":"tablet_project",
 		"ereader_project":"ereader_project"},
 	"repositories_clases": {
-		"droid2ino":"robotic_project",
 		"robopad":"robotic_project",
 		"printbots":"robotic_project",
 		"roboblocks":"robotic_project",
 		"blockly":"robotic_project",
+		"prusa-i3-hephestos":"robotic_project",
+		"witbox":"robotic_project",
+        	"ciclop" : "robotic_project",
+        	"horus": "robotic_project",
+        	"zum": "robotic_project",
+        	"zowi": "robotic_project",
+		"droid2ino":"robotic_project",
 		"cervantes":"ereader_project",
 		"android-bootanimation-checker":"android_project",
 		"edison-2" : "tablet_project",
@@ -28,46 +34,39 @@
 		"aquaris-E5":"smartphone_project",
 		"aquaris-E6":"smartphone_project",
 		"aquaris-5HD":"smartphone_project",
-        "aquaris-E5-4G":"smartphone_project",
+        	"aquaris-E5-4G":"smartphone_project",
 		"aquaris-5":"smartphone_project",
-        "aquaris-E10":"tablet_project"
+        	"aquaris-E10":"tablet_project"
 	},
 	"unwanted_repositories":{
 		"chat-kata":"false",
 		"chat-kata-extended":"false",
 		"Marlin":"false",
 		"Cura":"false",
-		"prusa-i3-hephestos":"false",
 		"hbs-helpers":"false",
 		"opencv":"false",
 		"diwo":"false",
-		"witbox":"false",
 		"browser-hooq":"false",
 		"Cyclone-PCB-Factory" :"false",
 		"printbot_part_library" :"false",
 		"blockly-bq" : "false",
-        "corbel-js" : "false",
-        "bitbloq-serial-uploader" : "false",
+        	"corbel-js" : "false",
+        	"bitbloq-serial-uploader" : "false",
 		"iOS-Scripting-PackageApplication-Swift-Support" :"false",
-        "horus": "false",
-        "horus-fw" : "false",
-        "ciclop" : "false",
-        "zum" : "false",
-        "cool-helpers": "false",
-        "oss-parents": "false",
-        "linux-e60622": "false",
-        "linux-e60q22": "false",
-        "kiui": "false",
-        "kiui-themes": "false",
-        "msm8916_platform_vendor_qcom-opensource_wlan_prima": "false",
-        "corbel-composer": "false",
-        "lib-rabbitmq": "false",
-        "bloqs": "false",
-        "zowi": "false",
-        "corbel": "false",
-        "lib-mongodb": "false",
-        "lib-config": "false",
+        	"horus-fw" : "false",
+        	"cool-helpers": "false",
+        	"oss-parents": "false",
+        	"linux-e60622": "false",
+        	"linux-e60q22": "false",
+        	"kiui": "false",
+        	"kiui-themes": "false",
+        	"msm8916_platform_vendor_qcom-opensource_wlan_prima": "false",
+        	"corbel-composer": "false",
+        	"lib-rabbitmq": "false",
+        	"bloqs": "false",
+        	"corbel": "false",
+        	"lib-mongodb": "false",
+        	"lib-config": "false",
 		"bq.github.io":"false"
-
 	}
 }
